--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,8 @@
   "description": "This extension allows the user to highlight code to send to hilite.me",
   "version": "1.0",
 
+  "options_page": "options/options.html",
+
   "browser_action": {
     "default_icon":   "icon.png",
     "default_popup":  "popup.html"
@@ -13,6 +15,7 @@
   "permissions": [
     "clipboardWrite",
     "contextMenus",
+    "storage",
     "http://hilite.me/"
   ],
 
