--- a/manifest.json
+++ b/manifest.json
@@ -8,14 +8,15 @@
   "options_page": "options/options.html",
 
   "browser_action": {
-    "default_icon":   "icon.png",
-    "default_popup":  "popup.html"
+    "default_icon":   "icons/icon38.png",
+    "default_popup":  "options/options.html"
   },
 
   "permissions": [
     "clipboardWrite",
     "contextMenus",
     "storage",
+    "notifications",
     "http://hilite.me/"
   ],
 
