--- a/manifest.json
+++ b/manifest.json
@@ -4,11 +4,17 @@
   "name": "Highlight to Hilite.me",
   "description": "This extension allows the user to highlight code to send to hilite.me",
   "version": "1.0",
-
+  "icons": {
+    "16":   "icons/icon16.png",
+    "48":   "icons/icon48.png",
+    "128":  "icons/icon128.png"
+  },
   "options_page": "options/options.html",
-
   "browser_action": {
-    "default_icon":   "icons/icon38.png",
+    "default_icon":   {
+      "19": "icons/icon19.png",
+      "38": "icons/icon38.png"
+    },
     "default_popup":  "options/options.html"
   },
 
